--- a/src/simgear/Makefile.am
+++ b/src/simgear/Makefile.am
@@ -1,5 +1,5 @@
 includedir = @includedir@/JSBSim/simgear
 
-SUBDIRS = structure props xml magvar misc
+SUBDIRS = structure props xml magvar misc io
 
 include_HEADERS = compiler.h
